--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="more col-lg-5">
-            <img class="image" src="images/grafika_banking.png" alt="bank">
+            <img class="image" src="grafika_banking.png" alt="bank">
 
             <button class="extra btn btn-outline-dark" type="submit">Need Support?</button>
             <br>
