--- a/changeMobileNumber.html
+++ b/changeMobileNumber.html
@@ -24,17 +24,17 @@
 <body>
     <div class="row">
         <div class="col-lg-12">
-            <h2 class="heading">Please update the Mobile Number.</h2>
+            <h2 class="heading">Please update the Mobile Number</h2>
         </div>
         <br>
 
         <div class="credentails col-lg-7">
-            <h3>Enter Old Mobile Number</h3>
-            <input class="username" size="30" type="text">
-            <h3>Enter New Mobile Number</h3>
-            <input class="username" size="30" type="text">
+            <h3>Old Mobile Number</h3>
+            <input class="username" size="30" type="text" placeholder="Enter old mobile number">
+            <h3>New Mobile Number</h3>
+            <input class="username" size="30" type="text" placeholder="Enter new mobile number">
             <h3>Confirm New Mobile Number</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" placeholder="Confirm new mobile number">
             <br>
             
             <br>
