--- a/changePassword.html
+++ b/changePassword.html
@@ -29,12 +29,12 @@
         <br>
 
         <div class="credentails col-lg-7">
-            <h3>Enter Old Password</h3>
-            <input class="username" size="30" type="text">
-            <h3>Enter New Password</h3>
-            <input class="username" size="30" type="text">
+            <h3>Old Password</h3>
+            <input class="username" size="30" type="text" placeholder="Enter old password">
+            <h3>New Password</h3>
+            <input class="username" size="30" type="text" placeholder="Enter new password">
             <h3>Confirm New Password</h3>
-            <input class="username" size="30" type="password">
+            <input class="username" size="30" type="password" placeholder="Confirm new password">
             <br>
             
             <br>
