--- a/Bpay.html
+++ b/Bpay.html
@@ -27,18 +27,24 @@
             <h2 class="heading">You're on Bill Payment screen</h2>
         </div>
         <br>
-
+        <datalist id="mylist">
+            <option value="51740013389">
+            <option value="51743389001">
+            <option value="53389174001">
+            <option value="50317408913">
+            <option value="51743389001">
+        </datalist>
         <div class="credentails col-lg-7">
             <h3>From Account </h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" list="mylist" placeholder="Enter from account">
             <h3>Enter Biller Code</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" placeholder="Enter biller code">
             <h3>Enter Biller Name</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" placeholder="Enter biller name">
             <h3>Enter Reference No</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" placeholder="Enter reference number">
             <h3>Enter Amount</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" placeholder="Enter amount">
             <br>
             
             <br>
