--- a/changeAddress.html
+++ b/changeAddress.html
@@ -29,12 +29,12 @@
         <br>
 
         <div class="credentails col-lg-7">
-            <h3>Enter Old Address</h3>
-            <input class="username" size="30" type="text">
-            <h3>Enter New Address</h3>
-            <input class="username" size="30" type="text">
+            <h3>Old Address</h3>
+            <input class="username" size="30" type="text" placeholder="Enter old address">
+            <h3>New Address</h3>
+            <input class="username" size="30" type="text" placeholder="Enter new address">
             <h3>Confirm New Address</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" placeholder="Confirm New Address">
             <br>
             
             <br>
