--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
         <div class="credentails col-lg-7">
             <h3>Enter your Username</h3>
             <input class="username" size="30" type="text">
+            
             <h3>Enter your Password</h3>
             <input class="username" size="30" type="password">
             <br>
             <br>
             <button class="btn btn-outline-dark"> <a href="homescreen.html" >Login</a></button>
+            <br>
             <br>
             <a class="a1" href="">Forgot Credentials?</a>
             <a class="a2" href="">Need Help?</a>
@@ -47,7 +49,7 @@
         </div>
 
         <div class="more col-lg-5">
-            <img class="image" src="grafika_banking.png" alt="bank">
+            <img class="image" src="images/grafika_banking.png" alt="bank">
 
             <button class="extra btn btn-outline-dark" type="submit">Need Support?</button>
             <br>
