--- a/merchent.html
+++ b/merchent.html
@@ -27,19 +27,32 @@
             <h2 class="heading">You're on Merchent Payment screen</h2>
         </div>
         <br>
-
+        <datalist id="mylist">
+            <option value="51740013389">
+            <option value="51743389001">
+            <option value="53389174001">
+            <option value="50317408913">
+            <option value="51743389001">
+        </datalist>
+        <datalist id="merId">
+            <option value="mer3389">
+            <option value="mer9001">
+            <option value="mer4001">
+            <option value="mer8913">
+            <option value="mer8067">
+        </datalist>
         <div class="credentails col-lg-7">
             <h3>From Account </h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" list="mylist" placeholder="Enter from account">
             
             <h3>Enter Merchent Account</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" list="merId" placeholder="Enter merchent account or Id">
 
             <h3>Enter Amount</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" placeholder="Enter amount">
 
             <h3>Description</h3>
-            <input class="username" size="30" type="text">
+            <textarea class="username" rows="8" cols="33" size="30" placeholder="Purpose of transfer"></textarea>
             <br>
             
             <br>
