--- a/payanyone.html
+++ b/payanyone.html
@@ -27,16 +27,23 @@
             <h2 class="heading">You're on Pay Anyone screen</h2>
         </div>
         <br>
+        <datalist id="mylist">
+            <option value="51740013389">
+            <option value="51743389001">
+            <option value="53389174001">
+            <option value="50317408913">
+            <option value="51743389001">
+        </datalist>
 
         <div class="credentails col-lg-7">
             <h3>From Account </h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" list="mylist" placeholder="Enter from account">
             <h3>Enter IFSC/Branch No</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" placeholder="Enter IFSC/Branch code">
             <h3>To Account</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" placeholder="Enter to account">
             <h3>Enter Amount</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" placeholder="Enter amount">
             <br>
             
             <br>
