--- a/self-trasfer.html
+++ b/self-trasfer.html
@@ -29,14 +29,21 @@
         <br>
 
         <div class="credentails col-lg-7">
+            <datalist id="mylist">
+                <option value="51740013389">
+                <option value="51743389001">
+                <option value="53389174001">
+                <option value="50317408913">
+                <option value="51743389001">
+            </datalist>
             <h3>From Account </h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text"  list="mylist" placeholder="Enter from account">
             <h3>To Account</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" list="mylist" placeholder="Enter to account">
             <h3>Enter Recipient Name</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30"  type="text" placeholder="Enter recipient name">
             <h3>Enter Amount</h3>
-            <input class="username" size="30" type="text">
+            <input class="username" size="30" type="text" placeholder="Enter amount">
             <br>
             
             <br>
